--- a/app/templates/estrutura.html
+++ b/app/templates/estrutura.html
@@ -1,106 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{% block title %}{% endblock %}</title>
-  <style>
-    body {
-        font-family: 'Open Sans', sans-serif;
-        background-color: #f7f7f7;
-        color: #333;
-        margin: 0;
-        padding: 0;
-    }
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>{% block title %}Meu Site{% endblock %}</title>
 
-    header {
-        background-color: #0096c7;
-        color: #fff;
-        text-align: center;
-    }
-
-    footer {
-        background-color: #ccc;
-        color: #333;
-        padding: 20px;
-        text-align: center;
-    }
-
-    nav {
-        background-color: #0096c7;
-        color: #fff;
-        height: 50px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    nav ul {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        display: flex;
-    }
-
-    nav ul li {
-        margin: 0 10px;
-    }
-
-    nav ul li a {
-        color: #fff;
-        text-decoration: none;
-        font-size: 16px;
-        padding: 15px;
-        transition: all 0.3s ease;
-    }
-
-    nav ul li a:hover {
-        background-color: #32bbe8;
-    }
-
-    nav ul li.active a {
-        background-color: #666;
-    }
-
-    nav ul li.active a:hover {
-        background-color: #999;
-    }
-
-  </style>
-</head>
-<body>
-  <header>
-    <nav>
-      <ul>
-          {%if user.is_authenticated%}
-
-          <li>Olá, {{user.username}}</li>
-          <li><a href="{% url "ListViewCars" %}">Todos os carros</a></li>
-          <li><a href="{% url "CreateViewCars" %}">Cadastrar novo carro</a></li>
-          <li><a href="{% url "LogoutAccounts" %}">Logout</a></li>
-
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/header.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/footer.css' %}" />
+  </head>
+  <body>
+    <header>
+      <nav class="nav-menu">
+        <ul class="nav-lu">
+          {% if user.is_authenticated %}
+          <li class="item-li">Olá, {{ user.username }}</li>
+          <li class="item-li"><a class="item-a" href="{% url 'ListViewCars' %}">Todos os carros</a></li>
+          <li class="item-li"><a class="item-a" href="{% url 'CreateViewCars' %}">Cadastrar novo carro</a></li>
+          <li class="item-li"><a class="item-a" href="{% url 'LogoutAccounts' %}">Logout</a></li>
+          {% else %}
+          <li class="item-li"><a class="item-a" href="{% url 'ListViewCars' %}">Home</a></li>
+          <li class="item-li"><a class="item-a" href="{% url 'LoginAccounts' %}">Login</a></li>
+          <li class="item-li"><a class="item-a" href="{% url 'RegisterAccounts' %}">Cadastre-se</a></li>
           {% endif %}
-          {%if not user.is_authenticated%}
+        </ul>
+      </nav>
+    </header>
 
+    <main>{% block content %}{% endblock %}</main>
 
-          <li><a href="{% url 'ListViewCars' %}">Home</a></li>
-          <li><a href="{% url 'LoginAccounts' %}">Login</a></li>
-          <li><a href="{% url 'RegisterAccounts' %}">Cadastre-se</a></li>
-          
-
-        {% endif %}
-        
-    </ul>
-    </nav>
-  </header>
-
-  <main>
-    {% block content %}
-    {% endblock %}
-  </main>
-
-  <footer>
     
-  </footer>
-</body>
+
+    {% block extra_scripts %}{% endblock %}
+  </body>
 </html>
