--- a/cars/templates/new_car.html
+++ b/cars/templates/new_car.html
@@ -1,12 +1,20 @@
-{% extends 'estrutura.html' %} 
+{% extends 'estrutura.html' %} {% load static %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static 'css/botoes.css' %}" />
+<link rel="stylesheet" href="{% static 'css/forms.css' %}" />
 
-<form method="POST" enctype="multipart/form-data" action="{% url 'CreateViewCars' %}"> 
-    {% csrf_token %} 
-    {{ form.as_p }} 
-    <input type="submit" value="Cadastrar"/>
-</form>
-
+<div class="form-container">
+  
+  <form
+    method="POST"
+    enctype="multipart/form-data"
+    action="{% url 'CreateViewCars' %}"
+  >
+  <h1>Cadastre um novo carro!</h1>
+    {% csrf_token %} {{ form.as_p }}
+    <input type="submit" value="Cadastrar" class="buttons-container btn btn-primary" />
+  </form>
+</div>
 
 {% endblock %}
